--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,28 +1,21 @@
 <div class="row row-cols-1 row-cols-md-3 g-3">
   {{#each postResult}}
-
   <div class="col-12 col-md-6 col-lg-4">
-
-    <div class="card shadow-sm" style="height: 450px;">
+    <div class="card text-white shadow-sm" style="height: 450px;">
       <img src="{{this.image}}" alt="" class="card-img-top img-fluid " style="height:300px">
       <div class="card-body d-flex flex-column align-items-center">
         <h5 class="card-title">{{this.title}}</h2>
           <a href="/posts/{{this.slug}}" class="btn btn-outline-primary mt-auto">Ver mas...</a>
       </div>
     </div>
-
   </div>
-
   {{/each}}
 </div>
 <div>
   <ul id="pagination" class="pagination mt-3">
-
   </ul>
 </div>
 <script>
-
-
   let pag = document.getElementById('pagination')
   const fragment = document.createDocumentFragment()
   for (let i = 1; i <= {{ pages }}; i++) {
@@ -36,8 +29,5 @@
     fragment.appendChild(li)
   }
   pag.appendChild(fragment)
-
 </script>
 </div>
-
-<!-- this. title, body, slug -->
