--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,7 @@
     <title>{{title}}</title>
 </head>
 
-<body>
+<body class="text-white">
 
     {{> navbar}}
 
@@ -30,10 +30,7 @@
 
         {{{body}}}
     </div>
-
     <script src="/js/main.js"></script>
-
-
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
         crossorigin="anonymous"></script>
