--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,26 +1,20 @@
-<div class="row row-cols-1 row-cols-sm-1 row-cols-md-2">
+<div class="row justify-content-center">
+    <div class="col-8 d-flex flex-column mb-3 justify-content-center align-items-center">
 
-    <div class="col-12 col-md-2 d-flex justify-content-center align-items-center flex-column">
-        <h3 class="">{{userProfile.name}}</h3>
-        <img class="" src="{{userProfile.avatar}}" alt="Avatar" style="max-width: 150px;">
-        <span class="">Posts: {{userPost.length}}</span>
+        <img class="rounded" src="{{userProfile.avatar}}" alt="Avatar" style="max-width: 150px;">
+
+        <h3>{{userProfile.name}}</h3>
+        <p>{{userProfile.about}}</p>
+
 
     </div>
-
-    <div class="col-12 col-md-10">
-
-
-
+    <div class="col-12">
         <div class="list-group">
-            <span class="list-group-item active">Posts Creados</span>
+            <span class="list-group-item active text-dark">Posts Creados: {{userPost.length}}</span>
             {{#each userPost}}
-
-            <a class="list-group-item list-group-item-action list-group-item-light"
+            <a class="list-group-item list-group-item-action list-group-item text-white"
                 href="/posts/{{this.slug}}">{{this.title}}</a>
-
             {{/each}}
         </div>
-
     </div>
-
 </div>
