--- a/views/show.hbs
+++ b/views/show.hbs
@@ -1,33 +1,30 @@
 <div class="row mb-4">
   <div class="col-12">
     <div class="card">
+      <img class="card-img-top" src="{{post.image}}" alt="Portada de {{post.title}}" style="height: 450px;">
       <div class="card-body d-flex flex-column">
-        <div>
-          <div class="d-flex flex-row justify-content-between align-items-center">
-            <a class="btn btn-primary mb-2" data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Ver Perfil"
-              href="/profile/{{userProfile._id}}">{{userProfile.name}}</a>
-            <img src="{{userProfile.avatar}}" alt="Avatar {{userProfile.name}}" style="max-width: 70px;">
+
+          <div class="d-flex flex-row justify-content-center align-items-center mb-3">
+            <a data-bs-toggle="tooltip" data-bs-placement="top" data-bs-title="Ver Perfil de {{userProfile.name}}"
+              href="/profile/{{userProfile._id}}"><img src="{{userProfile.avatar}}" alt="Avatar {{userProfile.name}}"
+                class="rounded-circle" style="max-width: 70px;"></a>
+
           </div>
-        </div>
+
         <h2 class="text-center">{{post.title}}</h2>
-        <img class="img-fluid justify-self-center rounded" src="{{post.image}}" alt="Portada de {{post.title}}"
-          style="height: 450px;">
 
         <div id="" class="mt-5 mb-5">
           {{{post.body}}}
         </div>
-
         {{> share}}
-
       </div>
     </div>
   </div>
 
-
   {{> listComments}}
 
   {{#if user}}
-    {{> createComment}}
+  {{> createComment}}
   {{/if}}
 
 </div>
