--- a/public/css/bootstrap.css
+++ b/public/css/bootstrap.css
@@ -29,7 +29,7 @@
   --bs-gray-700: #495057;
   --bs-gray-800: #343a40;
   --bs-gray-900: #212529;
-  --bs-primary: #9C27B0;
+  --bs-primary: #BA68C8;
   --bs-secondary: #6c757d;
   --bs-success: #198754;
   --bs-info: #0dcaf0;
@@ -37,7 +37,7 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
-  --bs-primary-rgb: 156, 39, 176;
+  --bs-primary-rgb: 186, 104, 200;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
   --bs-info-rgb: 13, 202, 240;
@@ -68,8 +68,8 @@
   --bs-border-radius-xl: 1rem;
   --bs-border-radius-2xl: 2rem;
   --bs-border-radius-pill: 50rem;
-  --bs-link-color: #9C27B0;
-  --bs-link-hover-color: #7d1f8d;
+  --bs-link-color: #BA68C8;
+  --bs-link-hover-color: #9553a0;
   --bs-code-color: #d63384;
   --bs-highlight-bg: #fff3cd;
 }
@@ -1808,13 +1808,13 @@ progress {
 
 .table-primary {
   --bs-table-color: #000;
-  --bs-table-bg: #ebd4ef;
-  --bs-table-border-color: #d4bfd7;
-  --bs-table-striped-bg: #dfc9e3;
+  --bs-table-bg: #f1e1f4;
+  --bs-table-border-color: #d9cbdc;
+  --bs-table-striped-bg: #e5d6e8;
   --bs-table-striped-color: #000;
-  --bs-table-active-bg: #d4bfd7;
+  --bs-table-active-bg: #d9cbdc;
   --bs-table-active-color: #000;
-  --bs-table-hover-bg: #d9c4dd;
+  --bs-table-hover-bg: #dfd0e2;
   --bs-table-hover-color: #000;
   color: var(--bs-table-color);
   border-color: var(--bs-table-border-color);
@@ -1980,7 +1980,7 @@ progress {
 .form-text {
   margin-top: 0.25rem;
   font-size: 0.875em;
-  color: #6c757d;
+  color: #fff;
 }
 
 .form-control {
@@ -1990,10 +1990,10 @@ progress {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #fff;
   background-color: #424242;
   background-clip: padding-box;
-  border: 1px solid #ced4da;
+  border: 1px solid #BA68C8;
   appearance: none;
   border-radius: 0.375rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2010,11 +2010,11 @@ progress {
   cursor: pointer;
 }
 .form-control:focus {
-  color: #212529;
+  color: #fff;
   background-color: #424242;
-  border-color: #ce93d8;
+  border-color: #b9a0bd;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(156, 39, 176, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(186, 104, 200, 0.25);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2031,7 +2031,7 @@ progress {
   padding: 0.375rem 0.75rem;
   margin: -0.375rem -0.75rem;
   margin-inline-end: 0.75rem;
-  color: #212529;
+  color: #fff;
   background-color: #e9ecef;
   pointer-events: none;
   border-color: inherit;
@@ -2133,13 +2133,13 @@ textarea.form-control-lg {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #fff;
   background-color: #424242;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='%23343a40' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='m2 5 6 6 6-6'/%3e%3c/svg%3e");
   background-repeat: no-repeat;
   background-position: right 0.75rem center;
   background-size: 16px 12px;
-  border: 1px solid #ced4da;
+  border: 1px solid #BA68C8;
   border-radius: 0.375rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
   appearance: none;
@@ -2150,9 +2150,9 @@ textarea.form-control-lg {
   }
 }
 .form-select:focus {
-  border-color: #ce93d8;
+  border-color: #b9a0bd;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(156, 39, 176, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(186, 104, 200, 0.25);
 }
 .form-select[multiple], .form-select[size]:not([size="1"]) {
   padding-right: 0.75rem;
@@ -2163,7 +2163,7 @@ textarea.form-control-lg {
 }
 .form-select:-moz-focusring {
   color: transparent;
-  text-shadow: 0 0 0 #212529;
+  text-shadow: 0 0 0 #fff;
 }
 
 .form-select-sm {
@@ -2227,13 +2227,13 @@ textarea.form-control-lg {
   filter: brightness(90%);
 }
 .form-check-input:focus {
-  border-color: #ce93d8;
+  border-color: #b9a0bd;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(156, 39, 176, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(186, 104, 200, 0.25);
 }
 .form-check-input:checked {
-  background-color: #9C27B0;
-  border-color: #9C27B0;
+  background-color: #BA68C8;
+  border-color: #BA68C8;
 }
 .form-check-input:checked[type=checkbox] {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='m6 10 3 3 6-6'/%3e%3c/svg%3e");
@@ -2242,8 +2242,8 @@ textarea.form-control-lg {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='2' fill='%23fff'/%3e%3c/svg%3e");
 }
 .form-check-input[type=checkbox]:indeterminate {
-  background-color: #9C27B0;
-  border-color: #9C27B0;
+  background-color: #BA68C8;
+  border-color: #BA68C8;
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3e%3cpath fill='none' stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M6 10h8'/%3e%3c/svg%3e");
 }
 .form-check-input:disabled {
@@ -2273,7 +2273,7 @@ textarea.form-control-lg {
   }
 }
 .form-switch .form-check-input:focus {
-  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23ce93d8'/%3e%3c/svg%3e");
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23b9a0bd'/%3e%3c/svg%3e");
 }
 .form-switch .form-check-input:checked {
   background-position: right center;
@@ -2315,10 +2315,10 @@ textarea.form-control-lg {
   outline: 0;
 }
 .form-range:focus::-webkit-slider-thumb {
-  box-shadow: 0 0 0 1px #424242, 0 0 0 0.25rem rgba(156, 39, 176, 0.25);
+  box-shadow: 0 0 0 1px #424242, 0 0 0 0.25rem rgba(186, 104, 200, 0.25);
 }
 .form-range:focus::-moz-range-thumb {
-  box-shadow: 0 0 0 1px #424242, 0 0 0 0.25rem rgba(156, 39, 176, 0.25);
+  box-shadow: 0 0 0 1px #424242, 0 0 0 0.25rem rgba(186, 104, 200, 0.25);
 }
 .form-range::-moz-focus-outer {
   border: 0;
@@ -2327,7 +2327,7 @@ textarea.form-control-lg {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #9C27B0;
+  background-color: #BA68C8;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2339,7 +2339,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-webkit-slider-thumb:active {
-  background-color: #e1bee7;
+  background-color: #ead2ef;
 }
 .form-range::-webkit-slider-runnable-track {
   width: 100%;
@@ -2353,7 +2353,7 @@ textarea.form-control-lg {
 .form-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #9C27B0;
+  background-color: #BA68C8;
   border: 0;
   border-radius: 1rem;
   transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2365,7 +2365,7 @@ textarea.form-control-lg {
   }
 }
 .form-range::-moz-range-thumb:active {
-  background-color: #e1bee7;
+  background-color: #ead2ef;
 }
 .form-range::-moz-range-track {
   width: 100%;
@@ -2489,11 +2489,11 @@ textarea.form-control-lg {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #fff;
   text-align: center;
   white-space: nowrap;
   background-color: #e9ecef;
-  border: 1px solid #ced4da;
+  border: 1px solid #BA68C8;
   border-radius: 0.375rem;
 }
 
@@ -2802,20 +2802,20 @@ textarea.form-control-lg {
 }
 
 .btn-primary {
-  --bs-btn-color: #fff;
-  --bs-btn-bg: #9C27B0;
-  --bs-btn-border-color: #9C27B0;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #852196;
-  --bs-btn-hover-border-color: #7d1f8d;
-  --bs-btn-focus-shadow-rgb: 171, 71, 188;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #7d1f8d;
-  --bs-btn-active-border-color: #751d84;
+  --bs-btn-color: #000;
+  --bs-btn-bg: #BA68C8;
+  --bs-btn-border-color: #BA68C8;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #c47fd0;
+  --bs-btn-hover-border-color: #c177ce;
+  --bs-btn-focus-shadow-rgb: 158, 88, 170;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #c886d3;
+  --bs-btn-active-border-color: #c177ce;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #fff;
-  --bs-btn-disabled-bg: #9C27B0;
-  --bs-btn-disabled-border-color: #9C27B0;
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #BA68C8;
+  --bs-btn-disabled-border-color: #BA68C8;
 }
 
 .btn-secondary {
@@ -2938,19 +2938,19 @@ textarea.form-control-lg {
 }
 
 .btn-outline-primary {
-  --bs-btn-color: #9C27B0;
-  --bs-btn-border-color: #9C27B0;
-  --bs-btn-hover-color: #fff;
-  --bs-btn-hover-bg: #9C27B0;
-  --bs-btn-hover-border-color: #9C27B0;
-  --bs-btn-focus-shadow-rgb: 156, 39, 176;
-  --bs-btn-active-color: #fff;
-  --bs-btn-active-bg: #9C27B0;
-  --bs-btn-active-border-color: #9C27B0;
+  --bs-btn-color: #BA68C8;
+  --bs-btn-border-color: #BA68C8;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #BA68C8;
+  --bs-btn-hover-border-color: #BA68C8;
+  --bs-btn-focus-shadow-rgb: 186, 104, 200;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #BA68C8;
+  --bs-btn-active-border-color: #BA68C8;
   --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
-  --bs-btn-disabled-color: #9C27B0;
+  --bs-btn-disabled-color: #BA68C8;
   --bs-btn-disabled-bg: transparent;
-  --bs-btn-disabled-border-color: #9C27B0;
+  --bs-btn-disabled-border-color: #BA68C8;
   --bs-gradient: none;
 }
 
@@ -3085,7 +3085,7 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #6c757d;
   --bs-btn-disabled-border-color: transparent;
   --bs-btn-box-shadow: none;
-  --bs-btn-focus-shadow-rgb: 171, 71, 188;
+  --bs-btn-focus-shadow-rgb: 158, 88, 170;
   text-decoration: underline;
 }
 .btn-link:focus-visible {
@@ -3192,7 +3192,7 @@ textarea.form-control-lg {
   --bs-dropdown-link-hover-color: #1e2125;
   --bs-dropdown-link-hover-bg: #e9ecef;
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #9C27B0;
+  --bs-dropdown-link-active-bg: #BA68C8;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-item-padding-x: 1rem;
   --bs-dropdown-item-padding-y: 0.25rem;
@@ -3457,7 +3457,7 @@ textarea.form-control-lg {
   --bs-dropdown-divider-bg: var(--bs-border-color-translucent);
   --bs-dropdown-link-hover-bg: rgba(255, 255, 255, 0.15);
   --bs-dropdown-link-active-color: #fff;
-  --bs-dropdown-link-active-bg: #9C27B0;
+  --bs-dropdown-link-active-bg: #BA68C8;
   --bs-dropdown-link-disabled-color: #adb5bd;
   --bs-dropdown-header-color: #adb5bd;
 }
@@ -3640,7 +3640,7 @@ textarea.form-control-lg {
 .nav-pills {
   --bs-nav-pills-border-radius: 0.375rem;
   --bs-nav-pills-link-active-color: #fff;
-  --bs-nav-pills-link-active-bg: #9C27B0;
+  --bs-nav-pills-link-active-bg: #BA68C8;
 }
 .nav-pills .nav-link {
   background: none;
@@ -4304,13 +4304,13 @@ textarea.form-control-lg {
   --bs-accordion-btn-icon-width: 1.25rem;
   --bs-accordion-btn-icon-transform: rotate(-180deg);
   --bs-accordion-btn-icon-transition: transform 0.2s ease-in-out;
-  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%238c239e'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
-  --bs-accordion-btn-focus-border-color: #ce93d8;
-  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(156, 39, 176, 0.25);
+  --bs-accordion-btn-active-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23a75eb4'%3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e");
+  --bs-accordion-btn-focus-border-color: #b9a0bd;
+  --bs-accordion-btn-focus-box-shadow: 0 0 0 0.25rem rgba(186, 104, 200, 0.25);
   --bs-accordion-body-padding-x: 1.25rem;
   --bs-accordion-body-padding-y: 1rem;
-  --bs-accordion-active-color: #8c239e;
-  --bs-accordion-active-bg: #f5e9f7;
+  --bs-accordion-active-color: #a75eb4;
+  --bs-accordion-active-bg: #f8f0fa;
 }
 
 .accordion-button {
@@ -4459,20 +4459,20 @@ textarea.form-control-lg {
   --bs-pagination-padding-x: 0.75rem;
   --bs-pagination-padding-y: 0.375rem;
   --bs-pagination-font-size: 1rem;
-  --bs-pagination-color: var(--bs-link-color);
-  --bs-pagination-bg: #fff;
+  --bs-pagination-color: #000;
+  --bs-pagination-bg: #BA68C8;
   --bs-pagination-border-width: 1px;
-  --bs-pagination-border-color: #dee2e6;
+  --bs-pagination-border-color: #994aa7;
   --bs-pagination-border-radius: 0.375rem;
-  --bs-pagination-hover-color: var(--bs-link-hover-color);
-  --bs-pagination-hover-bg: #e9ecef;
-  --bs-pagination-hover-border-color: #dee2e6;
+  --bs-pagination-hover-color: #000;
+  --bs-pagination-hover-bg: #a352b1;
+  --bs-pagination-hover-border-color: #81448b;
   --bs-pagination-focus-color: var(--bs-link-hover-color);
   --bs-pagination-focus-bg: #e9ecef;
-  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(156, 39, 176, 0.25);
+  --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(186, 104, 200, 0.25);
   --bs-pagination-active-color: #fff;
-  --bs-pagination-active-bg: #9C27B0;
-  --bs-pagination-active-border-color: #9C27B0;
+  --bs-pagination-active-bg: #BA68C8;
+  --bs-pagination-active-border-color: #BA68C8;
   --bs-pagination-disabled-color: #6c757d;
   --bs-pagination-disabled-bg: #fff;
   --bs-pagination-disabled-border-color: #dee2e6;
@@ -4614,12 +4614,12 @@ textarea.form-control-lg {
 }
 
 .alert-primary {
-  --bs-alert-color: #5e176a;
-  --bs-alert-bg: #ebd4ef;
-  --bs-alert-border-color: #e1bee7;
+  --bs-alert-color: #703e78;
+  --bs-alert-bg: #f1e1f4;
+  --bs-alert-border-color: #ead2ef;
 }
 .alert-primary .alert-link {
-  color: #4b1255;
+  color: #5a3260;
 }
 
 .alert-secondary {
@@ -4697,7 +4697,7 @@ textarea.form-control-lg {
   --bs-progress-border-radius: 0.375rem;
   --bs-progress-box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.075);
   --bs-progress-bar-color: #fff;
-  --bs-progress-bar-bg: #9C27B0;
+  --bs-progress-bar-bg: #BA68C8;
   --bs-progress-bar-transition: width 0.6s ease;
   display: flex;
   height: var(--bs-progress-height);
@@ -4754,8 +4754,8 @@ textarea.form-control-lg {
   --bs-list-group-disabled-color: #6c757d;
   --bs-list-group-disabled-bg: #2d2d2d;
   --bs-list-group-active-color: #fff;
-  --bs-list-group-active-bg: #9C27B0;
-  --bs-list-group-active-border-color: #9C27B0;
+  --bs-list-group-active-bg: #BA68C8;
+  --bs-list-group-active-border-color: #BA68C8;
   display: flex;
   flex-direction: column;
   padding-left: 0;
@@ -4978,17 +4978,17 @@ textarea.form-control-lg {
 }
 
 .list-group-item-primary {
-  color: #5e176a;
-  background-color: #ebd4ef;
+  color: #703e78;
+  background-color: #f1e1f4;
 }
 .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-  color: #5e176a;
-  background-color: #d4bfd7;
+  color: #703e78;
+  background-color: #d9cbdc;
 }
 .list-group-item-primary.list-group-item-action.active {
   color: #fff;
-  background-color: #5e176a;
-  border-color: #5e176a;
+  background-color: #703e78;
+  border-color: #703e78;
 }
 
 .list-group-item-secondary {
@@ -5107,7 +5107,7 @@ textarea.form-control-lg {
 }
 .btn-close:focus {
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(156, 39, 176, 0.25);
+  box-shadow: 0 0 0 0.25rem rgba(186, 104, 200, 0.25);
   opacity: 1;
 }
 .btn-close:disabled, .btn-close.disabled {
@@ -6608,8 +6608,8 @@ textarea.form-control-lg {
 }
 
 .text-bg-primary {
-  color: #fff !important;
-  background-color: RGBA(156, 39, 176, var(--bs-bg-opacity, 1)) !important;
+  color: #000 !important;
+  background-color: RGBA(186, 104, 200, var(--bs-bg-opacity, 1)) !important;
 }
 
 .text-bg-secondary {
@@ -6648,10 +6648,10 @@ textarea.form-control-lg {
 }
 
 .link-primary {
-  color: #9C27B0 !important;
+  color: #BA68C8 !important;
 }
 .link-primary:hover, .link-primary:focus {
-  color: #7d1f8d !important;
+  color: #c886d3 !important;
 }
 
 .link-secondary {
