--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -9,7 +9,7 @@
         </div>
         <div class="form-group">
           <label for="category" class="form-label mt-4">Categoria</label>
-          <select name="category" id="category">
+          <select name="category" id="category" class="form-control">
             <option name="info" value="info" selected>Informacion</option>
             <option name="review" value="review">Review</option>
             <option name="novedad" value="novedad">prueba</option>
