--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,5 +1,5 @@
-<div class="row justify-content-center">
-    <div class="col-8 d-flex flex-column mb-3 justify-content-center align-items-center">
+<div class="row justify-content-center align-items-center card">
+    <div class="col-8 d-flex flex-column mb-3 justify-content-center align-items-center mt-3">
 
         <img class="rounded" src="{{userProfile.avatar}}" alt="Avatar" style="max-width: 150px;">
 
@@ -8,8 +8,8 @@
 
 
     </div>
-    <div class="col-12">
-        <div class="list-group">
+    <div class="col-10">
+        <div class="list-group mb-3">
             <span class="list-group-item active text-dark">Posts Creados: {{userPost.length}}</span>
             {{#each userPost}}
             <a class="list-group-item list-group-item-action list-group-item text-white"
