--- a/views/profile/profile.hbs
+++ b/views/profile/profile.hbs
@@ -1,7 +1,7 @@
 <div class="row justify-content-center align-items-center card">
     <div class="col-8 d-flex flex-column mb-3 justify-content-center align-items-center mt-3">
 
-        <img class="rounded" src="{{userProfile.avatar}}" alt="Avatar" style="max-width: 150px;">
+        <img class="rounded-circle border border-primary" src="{{userProfile.avatar}}" alt="Avatar" style="max-width: 150px;">
 
         <h3>{{userProfile.name}}</h3>
         <p>{{userProfile.about}}</p>
